--- a/src/scss/global/_project_global.scss
+++ b/src/scss/global/_project_global.scss
@@ -11,6 +11,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.global-block-body-scroll-cst {
+	overflow: hidden;
+}
 .container-cst {
 	max-width: 1220px;
 	width: 100%;
